DEV-309: Refactoring code.