@@ -1,17 +1,18 @@
 package hr.ogcs.rextruderservice.service;
 
-import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.io.IOUtils;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.env.Environment;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.*;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
+import java.util.UUID;
 
 @Service
 @Slf4j
@@ -23,9 +24,6 @@ public class RScriptService {
     @Autowired
     private RProcessor rProcessor;
 
-    @Getter
-    public String outputFileName;
-
     @Value("${rscript.path}")
     private String rScriptPath;
 
@@ -33,49 +31,47 @@ public class RScriptService {
     private String uploadDir;
 
 
-    public byte[] uploadAndExecuteRScript(MultipartFile uploadedFile) {
+    public byte[] createPlotFromRScript(MultipartFile uploadedFile) throws IOException, InterruptedException {
         try {
-            String scriptFileName = uploadRScript(uploadedFile);
+            String scriptFileName = saveRScript(uploadedFile);
             byte[] plotBytes = executeRScriptAndRetrievePlot(scriptFileName);
             return documentService.generateWord(plotBytes);
-        } catch (IOException e) {
+        } catch (IOException | InterruptedException e) {
             log.error("IOException during R script execution: {}", e.getMessage());
-            throw new RuntimeException("IOException during R script execution", e);
+            throw e;
         }
     }
 
-    protected String uploadRScript(MultipartFile uploadedFile) throws IOException {
+    protected String saveRScript(MultipartFile uploadedFile) throws IOException {
         String fileName = uploadedFile.getOriginalFilename();
         Path filePath = Paths.get(uploadDir, fileName);
         uploadedFile.transferTo(filePath.toFile());
         return fileName;
     }
 
-    public byte[] executeRScriptAndRetrievePlot(String scriptFileName) throws IOException {
-        outputFileName = scriptFileName.replace(".R", ".png");
+    protected byte[] executeRScriptAndRetrievePlot(String scriptFileName) throws IOException, InterruptedException {
+        var outputFileName = scriptFileName.replace(".R", ".png");
 
         // Modify script to save the plot as a PNG
         String modifiedScriptContent = modifyScriptContent(scriptFileName, outputFileName);
 
         // Save modified script as a temp file
-        Path modifiedScriptPath = saveModifiedScript(modifiedScriptContent);
+        Path modifiedScriptPath = saveModifiedScript(modifiedScriptContent, scriptFileName);
+
+        Path destinationPath = Paths.get(uploadDir, outputFileName);
 
         try {
-            // Execute script
-            executeRScript(modifiedScriptPath);
+            // Execute script with outputFileName and destinationPath parameters
+            executeRScript(modifiedScriptPath, outputFileName, destinationPath);
 
             // Move plot to the same dir as script
-            Path destinationPath = Paths.get(uploadDir, outputFileName);
             Files.move(Paths.get(outputFileName), destinationPath, StandardCopyOption.REPLACE_EXISTING);
-
             // Retrieve plot bytes
             return Files.readAllBytes(destinationPath);
-        } catch (Exception e) {
-            // Log the exception for troubleshooting purposes
+        } catch (IOException | InterruptedException e) {
             log.error("Error during R script execution: {}", e.getMessage());
 
-            // Rethrow the exception as IOException
-            throw new IOException("Error during R script execution", e);
+            throw e;
         }
     }
 
@@ -86,9 +82,9 @@ public class RScriptService {
      * @return
      * @throws IOException
      */
-    String modifyScriptContent(String scriptFileName, String outputFileName) throws IOException {
-        String scriptContent = new String(Files.readAllBytes(Paths.get(uploadDir, scriptFileName)), StandardCharsets.UTF_8);
-
+    protected String modifyScriptContent(String scriptFileName, String outputFileName) throws IOException {
+        String scriptContent = Files.readString(Paths.get(uploadDir, scriptFileName));
+//TODO %s
         // Modify script to save the plot as a PNG
         if (scriptContent.contains("plot(")) {
             scriptContent = scriptContent.replace("plot(", String.format("png('%s')\nplot(", outputFileName));
@@ -96,23 +92,26 @@ public class RScriptService {
         }
         if (scriptContent.contains("KinReport(")) {
             int index = scriptContent.indexOf("KinReport(");
-            String pngCommand = String.format("png('%s')\n", outputFileName);
+            String pngCommand = String.format("png('%s')%s", outputFileName, System.lineSeparator());
             scriptContent = scriptContent.substring(0, index) + pngCommand + scriptContent.substring(index);
         }
+
         return scriptContent;
     }
 
-    Path saveModifiedScript(String modifiedScriptContent) throws IOException {
-        Path modifiedScriptPath = Files.createTempFile("modified_script", ".R");
+    protected Path saveModifiedScript(String modifiedScriptContent, String scriptFileName) throws IOException {
+        Path modifiedScriptPath = Path.of(
+                uploadDir + File.separator + "modified_" + scriptFileName.replace(" ", "_"));
+
         Files.write(modifiedScriptPath, modifiedScriptContent.getBytes(), StandardOpenOption.CREATE);
         return modifiedScriptPath;
     }
 
-    void executeRScript(Path modifiedScriptPath) throws IOException, InterruptedException {
+    protected void executeRScript(Path modifiedScriptPath, String outputFileName, Path destinationPath) throws IOException, InterruptedException {
         String command = rScriptPath + " " + modifiedScriptPath.toAbsolutePath();
 
         // The external R executable creates a PNG that is named like the script itself
-        Process process = rProcessor.execute(command);
+        Process process = rProcessor.execute(command, outputFileName, destinationPath);
 
         // Capture process output
         String processOutput = IOUtils.toString(process.getInputStream(), String.valueOf(StandardCharsets.UTF_8));
@@ -126,10 +125,8 @@ public class RScriptService {
         if (exitCode != 0) {
             // Log process errors
             log.error("Process Errors:\n{}", processError);
-            throw new RuntimeException("Failed to execute modified R script. Exit code: " + exitCode);
+            throw new IOException("Failed to execute modified R script. Exit code: " + exitCode);
         }
-        Files.deleteIfExists(modifiedScriptPath);
     }
-
-
+    //TODO cleanUp function
 }
